examples/test/testpolicy9925.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9925
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key31: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value42
      podSelector:
        matchLabels:
          key12: value0
          key9: value1
          key29: value45
